# tabletop-lab

./: .gitignore  README.md  pyproject.toml
games/cribbage/: game.json  score.lua
games/spysweeper/: game.json
games/template/: collection.csv  game.json
tabletop-lab/games/cribbage/: game.json  poker.json
tabletop-lab/games/spysweeper/: spysweeper_proto.py
tabletop-lab/lua/: Action.lua  Card.lua  Gamestate.lua  Object.lua  Zone.lua  utils.lua
